2005-11-25  Karl Runge <runge@karlrunge.com>
	* configure.ac: disable tightvnc-filetransfer if no libpthread.
	  add --without-pthread option.
	* libvncserver/Makefile.am: enable WITH_TIGHTVNC_FILETRANSFER
	  conditional.
	* libvncserver/rfbserver.c: fix deadlock from
	  rfbReleaseExtensionIterator(), fix no libz/libjpeg builds.
	* libvncserver/{main.c,private.h}, rfb/rfbclient.h, libvncclient/{rfbproto.c,
	  tight.c,vncviewer.c}: fix no libz/libjpeg builds.
	* libvncserver/tightvnc-filetransfer/rfbtightserver.c: fix no
	  libz/libjpeg builds.  rm // comments.
	* libvncserver/tightvnc-filetransfer/filetransfermsg{.c,.h},
	  libvncserver/auth.c: rm // comments.
	* libvncserver/tightvnc-filetransfer/filelistinfo.h: set NAME_MAX if not
	  defined.
	* x11vnc: throttle load if fb update requests not taking place.

2005-10-22  Karl Runge <runge@karlrunge.com>
	* x11vnc: -filexfer file transfer, -slow_fb, -blackout noptr...

2005-10-06  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* many a files: kill BackChannel and CustomClientMessage
	  support. The new extension mechanism is much more versatile.
	  To prove this, a new example shows how to implement the back
	  channel as an extension. Of course, this had to be tested, so
	  LibVNCClient now has beginnings of an extension mechanism, too.
	  And an example implementing the client side of the back channel.

2005-10-03  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* libvncserver/rfbserver.c, rfb/rfb.h: add a method to the
	  extension struct which is called to enable pseudo encodings.
	  This is a versatile mechanism to enable/disable custom
	  extensions with custom clients and servers.

2005-09-28  Rohit Kumar <rokumar@novell.com>
	* examples/filetransfer.c, rfb/rfb.h, configure.ac,
	  libvncserver/{auth,cargs,main,rfbserver,sockets}.c,
	  libvncserver/tightvnc-extension/*:
	  Implement TightVNC's file transfer protocol.

2005-09-27  Rohit Kumar <rokumar@novell.com>